Fix compilation for ANSI encoded source files